@@ -1,3 +1,7 @@
+2010-11-25  Christian Kuhn  <lolli@schwarzbu.ch>
+
+	* Fixed bug #16319: [scheduler] CronCmd class variable "values" does not contain integers only (Thanks to Marcus Krause)
+
 2010-11-25  Jigal van Hemert <jigal@xs4all.nl>
 
 	* Fixed bug #16322: Incorrect regexp in substituteMarkerArray
